# Clinical-Trial-Simulator

./: .gitignore  Dockerfile  README.md  blog.md  deploy_to_hf_cloud.py  fix_git.py  git_log.py  git_status.py  openenv.yaml  pyproject.toml  recover.py  run.ps1  run.sh  run_continuous.py  smoke_test.py  spaces_README.md  verify_syntax.py
artifacts/: replay_buffer.db  trial_data.db
artifacts/benchmark/: latest.json  latest_summary.json  latest_timeline.json
artifacts/benchmark_test/: latest.json  latest_summary.json  latest_timeline.json
artifacts/policy/: after_long_train.json  before_long_train.json  best_type2_diabetes.json  best_type2_diabetes_efficacy_phase_moe.pt  best_type2_diabetes_recruit_phase_moe.pt  best_type2_diabetes_regulatory_phase_moe.pt  best_type2_diabetes_safety_phase_moe.pt  best_type2_diabetes_tcn.pt  (+7 more)
demo/: app.py
docker/: Dockerfile.openenv
eval/: analytics.py  baselines.py  metrics.py  run_benchmark.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
notebooks/: clinical_trial_grpo_training.ipynb
scripts/: continuous_neural_training.py  generate_submission_plots.py  run_hf_training.py  run_pipeline.py
server/: openenv.space.yaml  openenv_api.py  openenv_client_example.py
tests/: test_anti_cheat.py  test_benchmark_artifacts.py  test_config.py  test_correction.py  test_curriculum.py  test_env.py  test_llm_policy_loading.py  test_llm_training_rewards.py  test_patient_simulation.py  test_policy_checkpoint.py  test_rewards.py  test_training_eval_rollout.py
training/: train_grpo.py  train_on_real_data.py
(+280 files in other folders)
